<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">八喜</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_tab_hall">购彩</string>
    <string name="main_tab_follow">合买</string>
    <string name="main_tab_win">开奖</string>
    <string name="main_tab_info">资讯</string>
    <string name="main_tab_center">账户</string>

    <!-- 刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中...</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中&#8230;</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开后加载</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">加载中...</string>
    <!-- 选号 -->


    <!-- 用户中心 -->
    <string name="center_tv_balance">可投注金额</string>
    <string name="center_tv_freeze">冻结</string>

    <!-- 用户投注页面 -->
    <string name="mylottry_title_name">投注记录</string>
    <string name="mylottry_title_all">全部</string>
    <string name="mylottry_title_lottery">中奖</string>
    <string name="mylottry_title_unlottery">待开奖</string>
    <string name="mylottry_title_follow">追号</string>
    <string name="mylottry_title_chipped">合买</string>
    <string name="center_bottom_unLottery">待开奖</string>
    <string name="center_title_eixt">退出登录</string>

    <!-- 登录注册 -->
    <string name="tv_name">账号:</string>
    <string name="tv_pass">密码:</string>
    <string name="btn_login">登录</string>
    <string name="login_btn_reg">免费注册</string>
    <string name="login_et_name">请输入用户名</string>
    <string name="login_et_pass">密码</string>
    <string name="reg_tv_titleName">免费注册</string>
    <string name="login_tv_titleName">登录</string>
    <string name="reg_tv_rePass">重复密码</string>
    <string name="reg_btn_reg">注册</string>
    <string name="reg_tv_email">邮箱</string>

    <!-- 选号界面 -->
    <string name="select_btn_playInfo">玩法说明</string>
    <string name="select_tv_kaijiang">上期开奖:</string>
    <string name="select_yao">摇一摇机选号码</string>
    <string name="num_common_red">红球区</string>
    <string name="num_dan_red">胆码区-红球</string>
    <string name="num_tuo_red">拖码区-红球</string>
    <string name="num_dan_blue">胆码区-篮球</string>
    <string name="num_common_blue">蓝球区</string>
    <string name="num_tuo_blue">蓝球</string>
    <string name="num_common_redShow">至少选出6个红球</string>
    <string name="num_dan_redShow">至少选出1个,最多5个</string>
    <string name="num_dan_redShow2">至少选出1个,最多4个</string>
    <string name="num_tuo_redShow">至少选出1个</string>
    <string name="num_blueShow">至少选出1个</string>
    <!-- 22选5 -->
    <string name="buy_22x5">22选5</string>
    <string name="num_22X5_redShow">请至少选出5个红球</string>
    <!-- 大乐透 -->
    <string name="num_cjdlt_red">前区号码</string>
    <string name="num_cjdlt_red2">胆码区-前区号码</string>
    <string name="num_cjdlt_red3">拖码区-前区号码</string>
    <string name="num_cjdlt_blue">后区号码</string>
    <string name="num_cjdlt_blue2">胆码区-后区号码</string>
    <string name="num_cjdlt_blue3">拖码区-后区号码</string>
    <string name="num_cjdlt_redShow">请至少选出5个前区号码</string>
    <string name="num_cjdlt_redShow2">请选出5个前区号码</string>
    <string name="num_cjdlt_blueShow">请至少选出2个后区号码</string>
    <string name="num_cjdlt_blueShow2">只能选择1个</string>

    <!-- 支付宝 -->
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="Ensure">"确定"</string>
    <string name="Cancel">"取消"</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>

    <!-- 彩票资讯 -->
    <string name="lotteryInformation_Title">彩票资讯</string>
    <string name="lotteryInformation_Children0">彩票资讯</string>
    <string name="lotteryInformation_Children1">专家推荐</string>
    <string name="lotteryInformation_Children2">站点公告</string>

    <!-- 时时乐 -->
    <string name="ssl2901">普通投注</string>
    <string name="ssl2902">组三单式</string>
    <string name="ssl2903">组三复式</string>
    <string name="ssl2904">组六</string>
    <string name="ssl2905">前二</string>
    <string name="ssl2906">后二</string>
    <string name="ssl2907">前一</string>
    <string name="ssl2908">后一</string>

    <string name="recharge">您的余额不足！请及时充值</string>

</resources>