<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/infomation_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/main_top" >

        <TextView
            android:id="@+id/infomation_title_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/lotteryInformation_Title"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/infomation_top"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/infomation_top_one"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:gravity="center"
                android:text="@string/lotteryInformation_Children0"
                android:textColor="@color/brown"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/infomation_top_one_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/infomation_top_two"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:gravity="center"
                android:text="@string/lotteryInformation_Children1"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/infomation_top_two_line"
                android:layout_width="match_parent"
                android:layout_height="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/infomation_top_three"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:gravity="center"
                android:text="@string/lotteryInformation_Children2"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/infomation_top_three_line"
                android:layout_width="match_parent"
                android:layout_height="2dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/red" >
    </LinearLayout>

    <com.sm.sls_app.view.MyListView
        android:id="@+id/info_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#DDDCDC"
        android:fadeScrollbars="true"
        android:fadingEdge="none"
        android:fastScrollEnabled="true"
        android:listSelector="#00000000"
        android:scrollingCache="false" />

</LinearLayout>