<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/lv_main_bottom"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/main_bottomlayout_height"
        android:background="#f0f2f5"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/line_shade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/icon_shade" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/main_layout_tubiao_height"
            android:background="#f0f2f5"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5" >

            <LinearLayout
                android:id="@+id/layout_tab_hall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_tab_hall"
                    android:layout_width="@dimen/main_tubiao_size"
                    android:layout_height="@dimen/main_tubiao_size"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/log_hall_selected" />

                <TextView
                    android:id="@+id/tv_tab_hall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/main_tab_hall"
                    android:textColor="@color/red"
                    android:textSize="@dimen/main_tab_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_tab_follow"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_tab_follow"
                    android:layout_width="@dimen/main_tubiao_size"
                    android:layout_height="@dimen/main_tubiao_size"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/log_follow_unselected" />

                <TextView
                    android:id="@+id/tv_tab_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/main_tab_follow"
                    android:textColor="#57515d"
                    android:textSize="@dimen/main_tab_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_tab_win"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_tab_win"
                    android:layout_width="@dimen/main_tubiao_size"
                    android:layout_height="@dimen/main_tubiao_size"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/log_win_unselected" />

                <TextView
                    android:id="@+id/tv_tab_win"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/main_tab_win"
                    android:textColor="#57515d"
                    android:textSize="@dimen/main_tab_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_tab_info"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_tab_info"
                    android:layout_width="@dimen/main_tubiao_size"
                    android:layout_height="@dimen/main_tubiao_size"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/log_info_unselected" />

                <TextView
                    android:id="@+id/tv_tab_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/main_tab_info"
                    android:textColor="#57515d"
                    android:textSize="@dimen/main_tab_textsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_tab_center"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_tab_center"
                    android:layout_width="@dimen/main_tubiao_size"
                    android:layout_height="@dimen/main_tubiao_size"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/log_center_unselected" />

                <TextView
                    android:id="@+id/tv_tab_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/main_tab_center"
                    android:textColor="#57515d"
                    android:textSize="@dimen/main_tab_textsize" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lv_main_bottom"
        android:layout_alignParentTop="true"
        android:background="#DDDCDC" />

    <!--
         com.android.ninepatch.NinePatchChunk.draw
   		VISIBLE:0  意思是可见的
		INVISIBILITY:4 意思是不可见的，但还占着原来的空间
		GONE:8  意思是不可见的，不占用原来的布局空间
    -->

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/start"
        android:orientation="horizontal"
        android:visibility="gone" >
    </LinearLayout>

</RelativeLayout>