<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/include_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_header_select" />

    <include
        android:id="@+id/include_bommon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/common_footer_select" />

    <include
        android:id="@+id/include_tip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include_top"
        layout="@layout/common_tip_pre_wininfo" />

    <include
        android:id="@+id/include_line_red"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_tip"
        layout="@layout/common_select_line" />

    <ScrollView
        android:id="@+id/sv_show_ball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/include_bommon"
        android:layout_below="@+id/include_line_red"
        android:background="@color/select_main" >

        <LinearLayout
            android:id="@+id/number_sv_center_ll_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/number_sv_center_ll_tishi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/layout_shake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/btn_main"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/iv_shake"
                        android:layout_width="@dimen/icon_shake_size"
                        android:layout_height="@dimen/icon_shake_size"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/icon_shake" />

                    <TextView
                        android:id="@+id/tv_shake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="机选"
                        android:textColor="@color/white"
                        android:textSize="@dimen/common_lage_text_size" />
                </LinearLayout>

                <TextView
                    android:id="@+id/number_sv_center_tv_redShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:text="@string/num_cjdlt_red"
                    android:textColor="@color/main_red"
                    android:textSize="@dimen/common_lage_text_size" />

                <TextView
                    android:id="@+id/number_sv_center_tv_redShow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/number_sv_center_tv_redShow"
                    android:layout_alignBottom="@+id/number_sv_center_tv_redShow"
                    android:layout_centerVertical="true"
                    android:layout_margin="3dp"
                    android:layout_toRightOf="@+id/number_sv_center_tv_redShow"
                    android:gravity="bottom"
                    android:text="@string/num_cjdlt_redShow"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_big_text_size" />
            </RelativeLayout>

            <com.sm.sls_app.view.MyGridView
                android:id="@+id/number_sv_center_gv_showRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:columnWidth="@dimen/icon_ball_size"
                android:gravity="center"
                android:horizontalSpacing="@dimen/icon_ball_spacing"
                android:listSelector="@android:color/transparent"
                android:numColumns="auto_fit"
                android:padding="@dimen/pop_gv_padding"
                android:stretchMode="columnWidth"
                android:verticalSpacing="@dimen/icon_ball_spacing" />

            <include
                android:id="@+id/select_line2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/include_tip"
                layout="@layout/common_select_line" />

            <!-- 胆拖选号区  默认隐藏 -->

            <LinearLayout
                android:id="@+id/all_red_dan_qu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:id="@+id/number_sv_center_ll_tishi3"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/number_dan_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="拖码区-前区号码"
                        android:textColor="@color/red"
                        android:textSize="@dimen/common_lage_text_size" />

                    <TextView
                        android:id="@+id/number_dan_show2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="至少选出2个"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_big_text_size" />
                </LinearLayout>

                <com.sm.sls_app.view.MyGridView
                    android:id="@+id/number_sv_center_showRed_dan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:columnWidth="@dimen/icon_ball_size"
                    android:gravity="center"
                    android:horizontalSpacing="@dimen/icon_ball_spacing"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="auto_fit"
                    android:padding="@dimen/pop_gv_padding"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="@dimen/icon_ball_spacing" />

                <include
                    android:id="@+id/select_line3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/include_tip"
                    layout="@layout/common_select_line" />
            </LinearLayout>
            <!-- 蓝球区 -->

            <RelativeLayout
                android:id="@+id/number_sv_center_ll_tishi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/number_sv_center_tv_blueShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/num_cjdlt_blue"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/common_lage_text_size" />

                <TextView
                    android:id="@+id/number_sv_center_tv_blueShow2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignBaseline="@+id/number_sv_center_tv_blueShow"
                    android:layout_alignBottom="@+id/number_sv_center_tv_blueShow"
                    android:layout_margin="3dp"
                    android:layout_toRightOf="@+id/number_sv_center_tv_blueShow"
                    android:gravity="center_vertical"
                    android:text="@string/num_cjdlt_blueShow"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_big_text_size" />
            </RelativeLayout>

            <com.sm.sls_app.view.MyGridView
                android:id="@+id/number_sv_center_gv_showBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:columnWidth="@dimen/icon_ball_size"
                android:gravity="center"
                android:horizontalSpacing="@dimen/icon_ball_spacing"
                android:listSelector="@android:color/transparent"
                android:numColumns="auto_fit"
                android:padding="@dimen/pop_gv_padding"
                android:stretchMode="columnWidth"
                android:verticalSpacing="@dimen/icon_ball_spacing" />
            <!-- 胆拖选号区  默认隐藏 -->

            <LinearLayout
                android:id="@+id/all_blue_dan_qu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <include
                    android:id="@+id/select_line4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/include_tip"
                    layout="@layout/common_select_line" />

                <LinearLayout
                    android:id="@+id/number_sv_center_ll_tishi4"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/number_danblue_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="拖码区-后区号码"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/common_lage_text_size" />

                    <TextView
                        android:id="@+id/number_danblue_show2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="至少选出2个"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_big_text_size" />
                </LinearLayout>

                <com.sm.sls_app.view.MyGridView
                    android:id="@+id/number_sv_center_showblue_dan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:columnWidth="@dimen/icon_ball_size"
                    android:gravity="center"
                    android:horizontalSpacing="@dimen/icon_ball_spacing"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="auto_fit"
                    android:padding="@dimen/pop_gv_padding"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="@dimen/icon_ball_spacing" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>